# cpp-template

./: LICENSE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  Makefile
{{cookiecutter.project_slug}}/cmake/: base.cmake  clangd.cmake  compilers.cmake  conan.cmake  vscode.cmake
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: CMakeLists.txt
